Se ingresar casos de force Update